--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "http://rabiehs.me/myPortfolio/"
+  "homepage": "https://ghofrane206.github.io/portfolio"
+
 }
